--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+/*
+  GENERAL CSS
+*/
 body {
   margin: 0;
   display: flex;
@@ -13,25 +16,6 @@ body {
   height: 100vh;
 }
 
-.player-card {
-  width: 260px;
-  height: auto;
-  border-radius: 15px;
-  background-color: #ffffff;
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  padding: 20px;
-  gap: 15px;
-  transition: transform 0.2s ease-in-out;
-}
-
-.player-card:hover {
-  transform: scale(1.03);
-}
-
 h1 {
   margin-bottom: 30px;
   color: #333;
@@ -43,25 +27,17 @@ h2 {
   margin: 0;
 }
 
-.player-name {
-  margin-left: 5px;
+label {
+  margin-bottom: 5px;
   font-weight: bold;
   color: #222;
 }
 
-.avatar {
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-  overflow: hidden;
-  border: 2px solid #ccc;
+label {
+  align-self: center;
+  justify-self: end;
 }
 
-.avatar img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
 
 button {
   width: 60px;
@@ -79,26 +55,25 @@ button:hover {
   background-color: #0056b3;
 }
 
-.add-player {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 15px;
-  padding: 20px;
-  border-radius: 15px;
-  background-color: #ffffff;
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-  transition: transform 0.2s ease-in-out;
-}
+.btn-submit {
+  max-width: fit-content;
+  justify-self: start;
 
-.add-player:hover {
-  transform: scale(1.03);
-}
+  padding: 0.2rem 0.6rem;
+  border-radius: 10px;
+  background-color: #008cba;
+  border: none;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
 
-label {
-  margin-bottom: 5px;
-  font-weight: bold;
-  color: #222;
+  transition: background-color 0.1s ease-in-out;
+
+  &:hover {
+    cursor: pointer;
+    background-color: color-mix(in srgb, #008cba, #333 20%);
+  }
 }
 
 input[type="text"] {
@@ -143,17 +118,74 @@ li {
 li:hover {
     background-color: #e3e3e3;
 }
+
+/*
+  PLAYER CARD
+*/
+.player-card {
+  width: 260px;
+  height: auto;
+  border-radius: 15px;
+  background-color: #ffffff;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 20px;
+  gap: 15px;
+  transition: transform 0.2s ease-in-out;
+}
+
+.player-card:hover {
+  transform: scale(1.03);
+}
+
+.player-name {
+  margin-left: 5px;
+  font-weight: bold;
+  color: #222;
+}
+
+.avatar {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 2px solid #ccc;
+}
+
+.avatar img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+/*
+  ADD PLAYER FORM
+*/
+.add-player {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 15px;
+  padding: 20px;
+  border-radius: 15px;
+  background-color: #ffffff;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s ease-in-out;
+}
+
+.add-player:hover {
+  transform: scale(1.03);
+}
+
 .addPlayerForm {
   display: grid;
   row-gap: 2rem;
   column-gap: 1rem;
 
   grid-template-columns: 150px 200px 1fr;
-}
-
-label {
-  align-self: center;
-  justify-self: end;
 }
 
 input[type="text"] {
@@ -169,26 +201,5 @@ input[type="text"] {
 
   &:focus {
     outline: 2px solid #008cba;
-  }
-}
-
-.btn-submit {
-  max-width: fit-content;
-  justify-self: start;
-
-  padding: 0.2rem 0.6rem;
-  border-radius: 10px;
-  background-color: #008cba;
-  border: none;
-  color: white;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-
-  transition: background-color 0.1s ease-in-out;
-
-  &:hover {
-    cursor: pointer;
-    background-color: color-mix(in srgb, #008cba, #333 20%);
   }
 }
